# evolution

./: .buildconfig  .cvsignore  .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  COPYING  COPYING-DOCS  COPYING.LGPL2  ChangeLog  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  README.translators  RELEASE-NOTES  acconfig.h  acinclude.m4  announcement-0.4.1.txt  autogen.sh  camel.pc.in  camelConf.sh.in  config.h.in  configure.ac  configure.in  enumtypes.c.template  enumtypes.h.template  evolution-addressbook.pc.in  evolution-calendar.pc.in  evolution-mail.pc.in  evolution-plugin.pc.in  evolution-shell.pc.in  evolution-zip.in  evolution.appdata.xml.in  evolution.desktop  (+13 more)
a11y/: ChangeLog  Makefile.am  ea-cell-table.c  ea-cell-table.h  ea-factory.h  gal-a11y-factory.h  gal-a11y-util.c  gal-a11y-util.h
addressbook/: CMakeLists.txt  ChangeLog  E-CARD-NEEDED-FIELDS  Makefile.am  addressbook-errors.xml  addressbook-errors.xml.h  addressbook.error.xml
art/: 16_configure_mail.xpm  16_copy_message.xpm  16_forward.xpm  16_move_message.xpm  16_print.xpm  16_save.xpm  24_all_contacts.xpm  24_find_contact.xpm  ChangeLog  ChangeLog.pre-1-4  Makefile.am  all_contacts.xpm  apply-filters-16.xpm  attachment.xpm  bell.xpm  broken-image-16.xpm  broken-image-24.xpm  configure_16_addressbook.xpm  configure_16_calendar.xpm  configure_16_folder.xpm  connect_to_url-16.xpm  dayview.xpm  delete_message.xpm  edit-16.xpm  edit.xpm  empty.xpm  encrypt.xpm  exec-16-summary.xpm  filters.xpm  find_message.xpm  flag-for-followup-done.xpm  flag-for-followup.xpm  folder.xpm  forget_passwords.xpm  forward.xpm  hand-16.xpm  hide_deleted_messages.xpm  hide_read_messages.xpm  hide_selected_messages.xpm  import.xpm  (+38 more)
calendar/: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  GnomeCal.idl  Makefile  Makefile.am  TODO  TODO.port  alarm.c  alarm.h  cal-backend.c  cal-backend.h  cal-client.c  cal-client.h  cal-factory.c  cal-listener.c  cal-listener.h  cal-util.c  cal-util.h  cal.c  cal.h  calcs.c  calcs.h  calendar-conduit-control-applet.desktop  calendar-conduit.c  calendar-conduit.h  calendar-errors.xml  calendar-errors.xml.h  calendar-pilot-sync.c  calendar.c  calendar.error.xml  calendar.h  calobj.c  calobj.h  clist.c  clist.h  corba-cal-factory.c  corba-cal-factory.h  corba-cal.c  (+61 more)
camel/: .cvsignore  CODING.STYLE  ChangeLog  ChangeLog.pre-1-4  Makefile.am  README  README.COPYRIGHT  README.HACKING  README.mt  broken-date-parser.c  broken-date-parser.h  camel-address.c  camel-address.h  camel-arg-collector.c  camel-arg.c  camel-arg.h  camel-block-file.c  camel-block-file.h  camel-certdb.c  camel-certdb.h  camel-charset-map-private.h  camel-charset-map.c  camel-charset-map.h  camel-cipher-context.c  camel-cipher-context.h  camel-cms-context.c  camel-cms-context.h  camel-data-cache.c  camel-data-cache.h  camel-data-wrapper.c  camel-data-wrapper.h  camel-debug.c  camel-debug.h  camel-digest-folder.c  camel-digest-folder.h  camel-digest-store.c  camel-digest-store.h  camel-digest-summary.c  camel-digest-summary.h  camel-disco-diary.c  (+270 more)
capplet/: .gitignore  Makefile.am  anjal-settings-main.c  anjal-settings-main.c.orig  anjal-settings-main.c.rej  mail-account-view.c  mail-capplet-shell.c  mail-capplet-shell.h  mail-decoration.c  mail-decoration.h  mail-guess-servers.h  mail-settings-view.c
composer/: .cvsignore  CMakeLists.txt  ChangeLog  Composer.idl  Evolution-Composer.idl  HTMLEditor.idl  Makefile.am  bad-icon.xpm  composer-marshal.list  e-composer-actions.c  e-composer-actions.h  e-composer-activity.c  e-composer-activity.h  e-composer-autosave.c  e-composer-autosave.h  e-composer-common.h  e-composer-from-header.c  e-composer-from-header.h  e-composer-header-table.c  e-composer-header-table.h  e-composer-header.c  e-composer-header.h  e-composer-name-header.c  e-composer-name-header.h  e-composer-post-header.c  e-composer-post-header.h  e-composer-private.c  e-composer-private.h  e-composer-spell-header.c  e-composer-spell-header.h  e-composer-text-header.c  e-composer-text-header.h  e-icon-list.c  e-icon-list.h  e-msg-composer-address-dialog.c  e-msg-composer-address-dialog.glade  e-msg-composer-address-dialog.glade.h  e-msg-composer-address-entry.c  e-msg-composer-address-entry.h  e-msg-composer-attachment-bar.c  (+22 more)
data/: .cvsignore  CMakeLists.txt  Makefile.am  default.css  evolution-alarm-notify.desktop.in.in  evolution-settings.desktop.in.in  evolution.1  evolution.appdata.xml  evolution.convert  evolution.desktop  evolution.desktop.in  evolution.desktop.in.in  evolution.keys  evolution.keys.in  evolution.keys.in.in  evolution.mime  org.gnome.Evolution-alarm-notify.desktop.in.in  org.gnome.Evolution.Devel.json  org.gnome.Evolution.appdata.xml.in  org.gnome.Evolution.appdata.xml.in.in  org.gnome.Evolution.desktop.in.in  org.gnome.Evolution.gresource.xml  org.gnome.Evolution.metainfo.xml.in.in  org.gnome.evolution.addressbook.gschema.xml.in  org.gnome.evolution.bogofilter.gschema.xml.in  org.gnome.evolution.calendar.gschema.xml.in  org.gnome.evolution.eplugin.attachment-reminder.gschema.xml.in  org.gnome.evolution.eplugin.autocontacts.gschema.xml.in  org.gnome.evolution.eplugin.bogo-junk.gschema.xml.in  org.gnome.evolution.eplugin.email-custom-header.gschema.xml.in  org.gnome.evolution.eplugin.external-editor.gschema.xml.in  org.gnome.evolution.eplugin.face-picture.gschema.xml.in  org.gnome.evolution.eplugin.itip.gschema.xml.in  org.gnome.evolution.eplugin.mail-notification.gschema.xml.in  org.gnome.evolution.eplugin.prefer-plain.gschema.xml.in  org.gnome.evolution.eplugin.templates.gschema.xml.in  org.gnome.evolution.gschema.xml.in  org.gnome.evolution.importer.gschema.xml.in  org.gnome.evolution.mail.gschema.xml.in  org.gnome.evolution.nightly.json  (+17 more)
default_user/: ChangeLog  ChangeLog.pre-1-4  Main_Shortcuts.xml  Makefile.am  Other_Shortcuts.xml  addressbook-sources.xml  ldapservers.xml  searches.xml  shortcuts.xml  vfolders.xml
e-util/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  arrow-up.xpm  bonobo-ui-compat.c  bonobo-ui-compat.h  (+804 more)
(+10301 files in other folders)
